# socket.io-cpp-client-sample

./: .clang-format  .gitignore  README.md
src/: CMakeLists.txt  client.cpp
web/: index.html  index.js  package.json
